--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <title>MGNREGA Tracker — MAHARASHTRA</title>
 
   <meta name="description" content="MGNREGA — district level easy-to-understand dashboard for Maharashtra. Bilingual, mobile-first, offline-capable." />
