--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/styles.css" />
-  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="js/chart.min.js"></script>
+
 </head>
 <body class="gradient-bg">
   <div id="app" aria-live="polite"></div>
