--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,10 +21,12 @@
 <body class="gradient-bg">
   <div id="app" aria-live="polite"></div>
 
-  <script src="js/i18n.js"></script>
+   <script src="js/i18n.js"></script>
   <script src="js/idb.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/chart.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/register-sw.js"></script>
 
   <script>
     if ('serviceWorker' in navigator) {
