--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,19 +19,18 @@
 <body class="gradient-bg">
   <div id="app" aria-live="polite"></div>
 
+    <!-- JS dependencies -->
   <script src="js/i18n.js"></script>
   <script src="js/idb.js"></script>
   <script src="js/api.js"></script>
-  <script src="js/chart.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/register-sw.js"></script>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('js/sw.js').then(() => {
-        console.log('SW registered');
-      }).catch(console.warn);
-    }
-  </script>
+  <!-- Chart.js should come BEFORE app.js -->
+  <script src="js/chart.min.js"></script>
+
+  <!-- Main app -->
+  <script src="js/app.js"></script>
+
+  <!-- Register Service Worker -->
+  <script src="js/register-sw.js"></script>
 </body>
 </html>
